c14-kubernetes/applications/base/edge-service/resources/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edge-service
  namespace: app-ns
  labels:
    app: edge-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: edge-service
  template:
    metadata:
      labels:
        app: edge-service
    spec:
      containers:
        - name: edge-service
          image: cloudbook/c09-edge-service:0.0.1-SNAPSHOT
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command: [ "sh", "-c", "sleep 5" ]
          ports:
            - containerPort: 9000
          resources:
            limits:
              cpu: 300m
            requests:
              cpu: 200m
