c14-kubernetes/applications/base/edge-service/resources/service.yml
apiVersion: v1
kind: Service
metadata:
  name: edge-service
  namespace: app-ns
  labels:
    app: edge-service
spec:
  type: ClusterIP
  selector:
    app: edge-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9000
