c14-kubernetes/applications/base/edge-service/resources/ingress-aws.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: line-ingress
  namespace: app-ns
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip    
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: edge-service
                port:
                  number: 80
